--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "vant": "^1.1.14",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
