--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lib-flexible": "^0.3.2",
     "moment": "^2.22.2",
     "vant": "^1.1.14",
     "vue": "^2.5.17",
@@ -69,7 +70,8 @@
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.13.1",
     "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "webpack-px2rem-loader": "^0.0.4"
   },
   "engines": {
     "node": ">= 6.0.0",
