--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lib-flexible": "^0.3.2",
     "moment": "^2.22.2",
     "vant": "^1.1.14",
+    "vee-validate": "^2.0.0-rc.25",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
